<resources>
    <string name="app_name">Relieve</string>

    <!--TitleBarItem-->
    <string name="hello">Halo</string>
    <string name="default_username">Muh. Alif Akbar</string>
    <string name="default_title">Discover</string>
    <string name="default_subtitle">Update informasi terkini bencana di seluruh Indonesia</string>

    <!--Discover-->
    <string name="map">Map</string>
    <string name="default_text">Lorem Ipsum de Omar Aspirin</string>
    <string name="disaster_time">2 menit yang lalu</string>
    <string name="disaster_time_template">%s yang lalu</string>
    <string name="disaster_live">Live</string>
    <string name="disaster_now">Sekarang!</string>

    <!--HUD-->
    <string name="status_banner">status banner</string>
    <string name="status_location">Bojongsoang, Bandung Barat</string>

    <!--Bottom Nav bar-->
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>

    <!--Notice-->
    <string name="notice">Awas!!\nGempa terjadi didekatmu</string>
    <string name="imsafe">Saya Aman</string>
    <string name="edit_service">Edit Layanan Pilihan</string>
    <string name="save_service">Simpan</string>

    <!--Chat-->
    <string name="no_chat_title">Tidak ada chat aktif</string>
    <string name="no_chat_desc">Hubungi kerbat mu atau bergabung di group informasi sebuah bencana</string>

    <!--Call-->
    <string name="emergency_call_now">Panggil</string>
    <string name="emergency_police">Kantor Polisi</string>
    <string name="emergency_hospital">Ambulance</string>
    <string name="emergency_red_cross">Palang Merah</string>
    <string name="emergency_fire_fighter">Pemadam Kebakaran</string>
    <string name="emergency_sar">Badan SAR</string>
    <string name="emergency_other">Lainnya</string>
    <string name="emergency_call">Panggilan Darurat</string>
    <string name="emergency_foundation">Lembaga Penanganan Darurat</string>
    <string name="emergency_fam">Panggilan Cepat</string>
    <string name="emergency_maximum_reached">Ups! maaf maksimal hanya 5</string>
    <string name="emergency_understand">Mengerti</string>
    <string name="default_notification_channel_id">default</string>

    <!--Boarding Home-->
    <string name="boarding_dont_have_account">Belum punya akun? Ayo</string>
    <string name="boarding_register_here">Daftar Disini</string>
    <string name="boarding_sign_google">Sign In With Google</string>
    <string name="boarding_login_now">Login Now</string>
    <string name="boarding_sign_up_now">Daftar Sekarang Yuk</string>
    <string name="boarding_home">Home Sweet Home</string>
    <string name="boarding_welcome">Welcome Back!</string>
    <string name="boarding_nice_to_see_you">Nice to see you</string>

    <!--Boarding Login-->
    <string name="forgot_pass_title">Kamu lupa password?</string>
    <string name="forgot_pass_subtitle">Beritau kami email / username kamu</string>
    <string name="forgot_email_username">Email / Username</string>
    <string name="help_me">Bantu Aku</string>
    <string name="ok">Oke</string>
    <string name="please_fill">Diisi dulu ya</string>
    <string name="error_email_format">Sepertinya kamu salah tulis email</string>
    <string name="error_password_match">password kamu tidak sama</string>
    <string name="error_password_length">buat password minimal 8 huruf</string>
    <string name="error_username">username tidak boleh mengandung spasi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="boarding_login">Login</string>
    <string name="unknown_error">Terjadi kesalahan, silahkan coba beberapa saat lagi</string>
    <string name="wrong_account">Username atau Password yang dimasukkan salah</string>

    <!--Boarding UserData-->
    <string name="bod_format">%d-%d-%s</string>
    <string name="boarding_register">Daftar</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="boy">Laki-Laki</string>
    <string name="girl">Perempuan</string>
    <string name="confirm_password">Ketik Ulang Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="fill_form">Cukup isi data dibawah</string>
    <string name="fill_form_2">Beritau kami mengenai kamu</string>
    <string name="phone_number_area">+62</string>
    <string name="phone_number">Nomor Telpon</string>
    <string name="terms_n_condition_prompt">By registering you are accepting our <a href="https://github.com/RelieveID/terms-and-conditions/">terms and condition</a> of use</string>

    <!--Walkthrough-->
    <string name="done">Mengerti</string>
    <string name="next">Lanjut</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
