<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.boarding.BoardingLoginFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBoardingLogin"
        app:titleTextAppearance="@style/AppTheme.MainToolbar"
        app:navigationIcon="@drawable/ic_back_arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvGreet"
                android:text="@string/boarding_nice_to_see_you"
                android:textSize="22sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/circular_std_black"
                android:textColor="@color/colorTextBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBoardingLogin"
                app:layout_constraintTop_toBottomOf="@+id/tvGreet"
                android:layout_marginTop="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@mipmap/login"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputUsername"
                app:layout_constraintTop_toBottomOf="@+id/ivBoardingLogin"
                android:layout_marginTop="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/colorEmptyRect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:textColorHighlight="@color/colorPrimary"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorEmptyRect"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputUsername"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@color/colorEmptyRect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColorHighlight="@color/colorPrimary"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorEmptyRect"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/circular_std_book"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/inputPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:background="@drawable/rounded_corner_rect_grey_big"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/circular_std_book"
                android:textColor="@android:color/white"
                android:gravity="center"
                app:fontFamily="@font/circular_std_medium"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/boarding_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvDontHaveAccount"
                android:text="@string/boarding_dont_have_account"
                android:textColor="@color/colorTextGrey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvRegisterHere"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvRegisterHere"
                android:text="@string/boarding_register_here"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>