<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.fragment.boarding.BoardingRegisterFragment"
    android:id="@+id/rootBoardingRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarBoardingRegister"
            app:titleTextAppearance="@style/AppTheme.MainToolbar"
            app:navigationIcon="@drawable/ic_back_arrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvGreet"
            android:text="@string/fill_form_2"
            android:textSize="22sp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/circular_std_black"
            android:textColor="@color/colorTextBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputFullName"
                    app:boxStrokeColor="@color/colorEmptyRect"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="26dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColorHighlight="@color/colorPrimary"
                        android:hint="@string/full_name"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:importantForAutofill="noExcludeDescendants"
                        android:imeOptions="actionNext"
                        android:textColorHint="@color/colorEmptyRect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPhoneNumberArea"
                    app:layout_constraintTop_toBottomOf="@+id/inputFullName"
                    app:boxStrokeColor="@color/colorEmptyRect"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/inputPhoneNumber"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColorHighlight="@color/colorPrimary"
                        android:text="@string/phone_number_area"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="noExcludeDescendants"
                        android:textColorHint="@color/colorEmptyRect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPhoneNumber"
                    app:layout_constraintTop_toTopOf="@+id/inputPhoneNumberArea"
                    app:layout_constraintStart_toEndOf="@+id/inputPhoneNumberArea"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:boxStrokeColor="@color/colorEmptyRect"
                    android:layout_marginEnd="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColorHighlight="@color/colorPrimary"
                        android:hint="@string/phone_number"
                        android:textSize="16sp"
                        android:textColorHint="@color/colorEmptyRect"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="noExcludeDescendants"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputDateOfBirth"
                    app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber"
                    app:boxStrokeColor="@color/colorEmptyRect"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColorHighlight="@color/colorPrimary"
                        android:hint="@string/date_of_birth"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="noExcludeDescendants"
                        android:focusable="false"
                        android:textColorHint="@color/colorEmptyRect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputGender"
                    app:layout_constraintTop_toBottomOf="@+id/inputDateOfBirth"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:boxStrokeColor="@color/colorEmptyRect"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="26dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColorHighlight="@color/colorPrimary"
                        android:hint="@string/gender"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:text="@string/boy"
                        android:importantForAutofill="noExcludeDescendants"
                        android:textColorHint="@color/colorEmptyRect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tvTermsNCondition"
            app:layout_constraintTop_toBottomOf="@id/inputGender"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/circular_std_book"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/terms_n_condition_prompt"
            android:textColorLink="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRegisterSubmit"
            android:layout_margin="16dp"
            android:padding="12dp"
            android:background="@drawable/rounded_corner_rect_grey_big"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/circular_std_book"
            android:textColor="@android:color/white"
            android:gravity="center"
            app:fontFamily="@font/circular_std_medium"
            app:layout_constraintTop_toBottomOf="@id/tvTermsNCondition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/boarding_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>